--- a/projects/sosnovsn/dominion/Makefile
+++ b/projects/sosnovsn/dominion/Makefile
@@ -1,30 +1,32 @@
 CFLAGS = -Wall -fpic -coverage -lm
 
+CARDS = smithy.o
+
 rngs.o: rngs.h rngs.c
 	gcc -c rngs.c -g  $(CFLAGS)
 
-smithy.o: cards/smithy.c
+$(CARDS): cards/smithy.c
 	gcc -c cards/smithy.c -g  $(CFLAGS)
 
-cards: smithy.o
+cards: $(CARDS)
 
 dominion.o: dominion.h dominion.c rngs.o
 	gcc -c dominion.c -g $(CFLAGS)
 
 playdom: dominion.o playdom.c cards
-	gcc -o playdom playdom.c -g dominion.o rngs.o smithy.o $(CFLAGS)
+	gcc -o playdom playdom.c -g dominion.o rngs.o $(CARDS) $(CFLAGS)
 #To run playdom you need to entere: ./playdom <any integer number> like ./playdom 10*/
 testDrawCard: testDrawCard.c dominion.o rngs.o cards
-	gcc  -o testDrawCard -g  testDrawCard.c dominion.o rngs.o smithy.o $(CFLAGS)
+	gcc  -o testDrawCard -g  testDrawCard.c dominion.o rngs.o $(CARDS) $(CFLAGS)
 
 badTestDrawCard: badTestDrawCard.c dominion.o rngs.o cards
-	gcc -o badTestDrawCard -g  badTestDrawCard.c dominion.o rngs.o smithy.o $(CFLAGS)
+	gcc -o badTestDrawCard -g  badTestDrawCard.c dominion.o rngs.o $(CARDS) $(CFLAGS)
 
 testBuyCard: testDrawCard.c dominion.o rngs.o cards
-	gcc -o testDrawCard -g  testDrawCard.c dominion.o rngs.o smithy.o $(CFLAGS)
+	gcc -o testDrawCard -g  testDrawCard.c dominion.o rngs.o $(CARDS) $(CFLAGS)
 
 testAll: dominion.o testSuite.c cards
-	gcc -o testSuite testSuite.c -g  dominion.o rngs.o smithy.o $(CFLAGS)
+	gcc -o testSuite testSuite.c -g  dominion.o rngs.o $(CARDS) $(CFLAGS)
 
 interface.o: interface.h interface.c
 	gcc -c interface.c -g  $(CFLAGS)
@@ -36,9 +38,9 @@ runtests: testDrawCard
 
 
 player: player.c interface.o cards
-	gcc -o player player.c -g  dominion.o rngs.o interface.o smithy.o $(CFLAGS)
+	gcc -o player player.c -g  dominion.o rngs.o interface.o $(CARDS) $(CFLAGS)
 
 all: playdom player testDrawCard testBuyCard badTestDrawCard
 
 clean:
-	rm -f *.o playdom.exe playdom player player.exe  *.gcov *.gcda *.gcno *.so *.out testDrawCard testDrawCard.exe
+	rm -f *.o playdom.exe playdom player player.exe  *.gcov *.gcda *.gcno *.so *.out testDrawCard badTestDrawCard testDrawCard.exe
