--- a/projects/sosnovsn/dominion/Makefile
+++ b/projects/sosnovsn/dominion/Makefile
@@ -1,6 +1,6 @@
 CFLAGS = -Wall -fpic -coverage -lm
 
-CARDS = smithy.o adventurer.o council_room.o
+CARDS = smithy.o adventurer.o council_room.o gardens.o village.o
 
 rngs.o: rngs.h rngs.c
 	gcc -c rngs.c -g  $(CFLAGS)
@@ -10,6 +10,12 @@ smithy.o: cards/smithy.c
 
 adventurer.o: cards/adventurer.c
 	gcc -c cards/adventurer.c -g  $(CFLAGS)
+
+gardens.o: cards/gardens.c
+	gcc -c cards/gardens.c -g  $(CFLAGS)
+
+village.o: cards/village.c
+	gcc -c cards/village.c -g  $(CFLAGS)
 
 council_room.o: cards/council_room.c
 	gcc -c cards/council_room.c -g  $(CFLAGS)
