--- a/projects/sosnovsn/dominion/Makefile
+++ b/projects/sosnovsn/dominion/Makefile
@@ -43,6 +43,24 @@ unittest1: unittest1.c dominion.o rngs.o cards
 unittest2: unittest2.c dominion.o rngs.o cards
 	gcc -o unittest2 -g  unittest2.c dominion.o rngs.o $(CARDS) $(CFLAGS)
 
+unittest3: unittest3.c dominion.o rngs.o cards
+	gcc -o unittest3 -g  unittest3.c dominion.o rngs.o $(CARDS) $(CFLAGS)
+
+unittest4: unittest4.c dominion.o rngs.o cards
+	gcc -o unittest4 -g  unittest4.c dominion.o rngs.o $(CARDS) $(CFLAGS)
+
+cardtest1: cardtest1.c dominion.o rngs.o cards
+	gcc -o cardtest1 -g  cardtest1.c dominion.o rngs.o $(CARDS) $(CFLAGS)
+
+cardtest2: cardtest2.c dominion.o rngs.o cards
+	gcc -o cardtest2 -g  cardtest2.c dominion.o rngs.o $(CARDS) $(CFLAGS)
+
+cardtest3: cardtest3.c dominion.o rngs.o cards
+	gcc -o cardtest3 -g  cardtest3.c dominion.o rngs.o $(CARDS) $(CFLAGS)
+
+cardtest4: cardtest4.c dominion.o rngs.o cards
+	gcc -o cardtest4 -g  cardtest4.c dominion.o rngs.o $(CARDS) $(CFLAGS)
+
 testAll: dominion.o testSuite.c cards
 	gcc -o testSuite testSuite.c -g  dominion.o rngs.o $(CARDS) $(CFLAGS)
 
@@ -54,9 +72,15 @@ runtests: testDrawCard
 	gcov dominion.c >> unittestresult.out
 	cat dominion.c.gcov >> unittestresult.out
 
-rununittests: unittest1 unittest2
+rununittests: unittest1 unittest2 unittest3 unittest4 cardtest1 cardtest2 cardtest3 cardtest4
 	./unittest1 > unittestresult.out
 	./unittest2 >> unittestresult.out
+	./unittest3 >> unittestresult.out
+	./unittest4 >> unittestresult.out
+	./cardtest1 >> unittestresult.out
+	./cardtest2 >> unittestresult.out
+	./cardtest3 >> unittestresult.out
+	./cardtest4 >> unittestresult.out
 	gcov dominion.c >> unittestresult.out
 
 
@@ -66,4 +90,4 @@ player: player.c interface.o cards
 all: playdom player testDrawCard testBuyCard badTestDrawCard
 
 clean:
-	rm -f *.o playdom.exe playdom player player.exe  *.gcov *.gcda *.gcno *.so *.out testDrawCard badTestDrawCard testDrawCard.exe unittest1 unittest2
+	rm -f *.o playdom.exe playdom player player.exe  *.gcov *.gcda *.gcno *.so *.out testDrawCard badTestDrawCard testDrawCard.exe unittest1 unittest2 unittest3 unittest4 cardtest1 cardtest2 cardtest3 cardtest4
